--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,8 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+   assets:
+     - assets/stream_banner.png
   
   # fonts:
   #   - family: Schyler
