--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  graphql: 3.1.0
+  http: ^0.12.2
+  stream_chat_flutter: ^0.2.14
 
 dev_dependencies:
   flutter_test:
