--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.12.2
+  stream_chat_flutter: ^0.2.14
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 flutter:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+   assets:
+     - assets/stream_banner.png
   
   # fonts:
   #   - family: Schyler
