--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,6 +2,9 @@
 # Using directly pending analyzer bug: https://github.com/dart-lang/sdk/issues/42910
 
 analyzer:
+  exclude:
+    - example/**
+    - test/**
   strong-mode:
     implicit-casts: false
   errors:
